<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebebeb"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cpay_title_bg" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dip"
            android:background="@drawable/chinapay_return_click" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/cpay_logo" />
    </RelativeLayout>

    <WebView
        android:id="@+id/company_info_web"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ebebeb"
        android:scrollbars="none"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dip"
        android:layout_marginRight="12dip"
        android:layout_marginTop="20dip"
        android:background="@drawable/cpay_frame_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/company_info"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/chinapay__help_topitem_click" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dip"
                android:text="@string/cp_company_info"
                android:textColor="#515151"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dip"
                android:background="@drawable/cpay_help_list_jt" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/support_bank"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/chinapay__help_miditem_click" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dip"
                android:text="@string/cp_support_bank"
                android:textColor="#515151"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dip"
                android:background="@drawable/cpay_help_list_jt" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sujestion"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/chinapay__help_miditem_click" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dip"
                android:text="@string/cp_sujestion"
                android:textColor="#515151"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dip"
                android:background="@drawable/cpay_help_list_jt" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/chinapay__help_botitem_click" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dip"
                android:text="@string/cp_version_2"
                android:textColor="#515151"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/version_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dip"
                android:text="V1.0.0"
                android:textColor="#232323"
                android:textSize="17sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/tel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="15dip"
        android:background="@drawable/chinapay__help_telitem_click" >

        <TextView
            android:id="@+id/tel_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dip"
            android:text="@string/cp_tel_1"
            android:textColor="#515151"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/jiantou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dip"
            android:background="@drawable/cpay_help_list_jt" />

        <TextView
            android:id="@+id/tel_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/jiantou"
            android:text="@string/cp_tel_3"
            android:textColor="#515151"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tel_number_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/tel_3"
            android:text="@string/cp_tel_2_1"
            android:textColor="@color/cp_red"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tel_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dip"
            android:layout_toLeftOf="@id/tel_number_1"
            android:text="@string/cp_tel_2"
            android:textColor="@color/cp_red"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>